--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lisen",
+  "name": "node-typescript-starter-template",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -16,10 +16,6 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
-    "@types/node": "^14.0.20",
-    "@types/cheerio": "^0.22.21",
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1"
+    "@types/node": "^14.0.20"
   }
 }
